# The-item-crafter-v2.0

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
src/item_crafter/: __main__.py  exceptions.py
src/item_crafter/data_classes/: item_search_modes.py  meta_data.py  models.py  tkinter_dataclass.py
src/item_crafter/frames/: craft_frame.py  main_frame.py  notebook_frame.py  resource_frame.py
src/item_crafter/main_window/: main_window.py  tabs.py
src/item_crafter/roller/: match_checker.py  property_handler.py  roller.py  screenshot_to_text.py
src/item_crafter/utils/: poe_finder.py  singleton.py  sounds.py
